--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     </style>
   </head>
   <body>
-    <header>
-      <strong>Animal Law Focus</strong>
+  <header style="padding:10px 14px;border-bottom:1px solid #e5e5e5;">
+  <strong>Animal Law Focus</strong>
+</header>
       <div class="note">
         Mapa en migración a infraestructura propia. Versión temporal embebida abajo.
       </div>
