--- a/index.html
+++ b/index.html
@@ -1,25 +1,73 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Mapa Industria – Animal Law Focus</title>
-    <style>
-      html, body { height: 100%; margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; }
-      header { padding: 12px 16px; border-bottom: 1px solid #e5e5e5; }
-      .note { font-size: 14px; color: #444; margin-top: 4px; }
-      iframe { width: 100%; height: calc(100vh - 64px); border: 0; }
-    </style>
-  </head>
-  <body>
-  <header style="padding:10px 14px;border-bottom:1px solid #e5e5e5;">
-  <strong>Animal Law Focus</strong>
-</header>
-      <div class="note">
-        Mapa en migración a infraestructura propia. Versión temporal embebida abajo.
-      </div>
-    </header>
+<head>
+  <meta charset="utf-8" />
+  <title>Mapa Industria Animal – Animal Law Focus</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <iframe src="https://factoryfarmschile.onrender.com/" title="Mapa Industria"></iframe>
-  </body>
+  <!-- Leaflet CSS -->
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""
+  />
+
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+    }
+
+    header {
+      padding: 10px 14px;
+      border-bottom: 1px solid #e5e5e5;
+      background: #ffffff;
+    }
+
+    header strong {
+      display: block;
+      font-size: 16px;
+    }
+
+    header span {
+      font-size: 13px;
+      color: #555;
+    }
+
+    #map {
+      width: 100%;
+      height: calc(100vh - 58px);
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <strong>Animal Law Focus</strong>
+    <span>Mapa de la industria animal en Chile (v2 en construcción)</span>
+  </header>
+
+  <div id="map"></div>
+
+  <!-- Leaflet JS -->
+  <script
+    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""
+  ></script>
+
+  <script>
+    // Crear el mapa centrado en Chile
+    const map = L.map('map').setView([-33.45, -70.66], 6);
+
+    // Capa base (OpenStreetMap)
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 18,
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+  </script>
+
+</body>
 </html>
