--- a/index.html
+++ b/index.html
@@ -62,11 +62,15 @@
     // Crear el mapa centrado en Chile
     const map = L.map('map').setView([-33.45, -70.66], 6);
 
-    // Capa base (OpenStreetMap)
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 18,
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
+  // Capa base satelital (ESRI World Imagery)
+L.tileLayer(
+  'https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}',
+  {
+    maxZoom: 19,
+    attribution:
+      'Tiles © Esri — Source: Esri, Maxar, Earthstar Geographics'
+  }
+).addTo(map);
   </script>
 
 </body>
