--- a/index.html
+++ b/index.html
@@ -43,6 +43,29 @@
       height: calc(100vh - 58px);
     }
   </style>
+  #floating-panel {
+  position: absolute;
+  top: 80px;
+  left: 20px;
+  width: 260px;
+  background: white;
+  border-radius: 8px;
+  padding: 14px;
+  box-shadow: 0 4px 14px rgba(0,0,0,0.2);
+  z-index: 1000;
+}
+
+#floating-panel h3 {
+  margin: 0 0 6px 0;
+  font-size: 16px;
+}
+
+#floating-panel p {
+  margin: 0;
+  font-size: 13px;
+  color: #555;
+}
+
 </head>
 <body>
 
@@ -52,6 +75,11 @@
   </header>
 
   <div id="map"></div>
+  <!-- Caja flotante -->
+<div id="floating-panel">
+  <h3>Panel de control</h3>
+  <p>(en construcción)</p>
+</div>
 
   <!-- Leaflet JS -->
   <script
