--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   />
 
   <style>
-    html, body {<div id="floating-panel">
+   <div id="floating-panel">
   <h3>Animal Law Focus</h3>
+
   <p>
     Mapa de la industria animal en Chile (v2)
-    <br>
-    <small>
-      Basado en la versión beta creada por Cole Haynes
-      <br>
-      en colaboración con Animal Law Focus
-    </small>
+  </p>
+
+  <p style="margin-top:8px; font-size:11px; color:#666;">
+    Basado en la versión beta creada por <strong>Cole Haynes</strong><br>
+    en colaboración con <strong>Animal Law Focus</strong>
   </p>
 </div>
 
