--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
   <h3>Animal Law Focus</h3>
 
   <p>
-    Mapa de la industria animal en Chile (v2)
+    Mapa de la industria animal en Chile (v2) Basado en la versión beta creada por <strong>Cole Haynes</strong><br>
+    en colaboración con <strong>Animal Law Focus</strong>
   </p>
 
   <p style="margin-top:8px; font-size:11px; color:#666;">
-    Basado en la versión beta creada por <strong>Cole Haynes</strong><br>
-    en colaboración con <strong>Animal Law Focus</strong>
-  </p>
 </div>
 
       height: 100%;
