--- a/index.html
+++ b/index.html
@@ -14,21 +14,19 @@
   />
 
   <style>
-   <div id="floating-panel">
-  <h3>Animal Law Focus</h3>
+ #floating-panel {
+  position: fixed;
+  top: 100px;
+  left: 20px;
+  width: 300px;
+  background: white;
+  border-radius: 10px;
+  padding: 16px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.25);
+  z-index: 9999;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+}
 
-  <p>
-    Mapa de la industria animal en Chile (v2) Basado en la versión beta creada por <strong>Cole Haynes</strong><br>
-    en colaboración con <strong>Animal Law Focus</strong>
-  </p>
-
-  <p style="margin-top:8px; font-size:11px; color:#666;">
-</div>
-
-      height: 100%;
-      margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
-    }
 
     header {
       padding: 10px 14px;
