--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
   <!-- BARRA SUPERIOR -->
   <div id="top-bar">
     <h2>Animal Law Focus</h2>
-    <span>Mapa de la industria animal en Chile (v2)</span>
+    <span>Mapa de la industria animal en Chile V.2 basada en la versión beta creada por
+Cole Haynes, en colaboración con
+Animal Law Focus. </span>
   </div>
 
   <!-- PANEL FLOTANTE -->
