--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
   <!-- Google Maps API -->
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ7VDoc_gPwmcZHtiCmAWGXPtcosZSzfM&v=weekly"
-    defer
-  ></script>
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ7VDoc_gPwmcZHtiCmAWGXPtcosZSzfM&callback=initMap"
+  async
+></script>
+
 
   <style>
     html, body {
