--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Google Maps API -->
   <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ7VDoc_gPwmcZHtiCmAWGXPtcosZSzfM&callback=initMap"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrmjCo4PgDpUhwVGloxtePQjnNCXMqXDkMap"
   async
 ></script>
 
